--- a/baptism.html
+++ b/baptism.html
@@ -1,5 +1,4 @@
-# Промяна на baptism.html: съдържанието се изтегля вляво, за да се вижда картината
-baptism_html_left_aligned = '''<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -105,11 +104,3 @@ baptism_html_left_aligned = '''<!DOCTYPE html>
   <div class="credit">created by elion (ai)</div>
 </body>
 </html>
-'''
-
-# Записваме новата версия
-baptism_left_path = "/mnt/data/baptism.html"
-with open(baptism_left_path, "w", encoding="utf-8") as f:
-    f.write(baptism_html_left_aligned)
-
-baptism_left_path
