--- a/about.html
+++ b/about.html
@@ -3,55 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luminia | About</title>
+  <title>Luminia</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Georgia', serif;
-      background: url("elion-background.png") no-repeat center center fixed;
+      font-family: 'Roboto', sans-serif;
+      background-image: url('rose-of-consciousness.png');
       background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       color: white;
+      text-align: center;
     }
     nav {
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 16px 0;
-      font-size: 16px;
-      font-weight: bold;
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 10px 0;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
     }
     nav a {
       color: white;
+      margin: 0 25px;
       text-decoration: none;
-    }
-    nav a:hover {
-      color: #ccc;
+      font-size: 18px;
+      font-weight: bold;
     }
     .content {
-      max-width: 700px;
-      margin: 100px auto;
-      padding: 40px;
-      background-color: rgba(0, 0, 0, 0.4);
-      border-radius: 12px;
-      text-align: center;
+      padding: 160px 20px 60px 20px;
+      max-width: 800px;
+      margin: 0 auto;
+      text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.9);
+      font-size: 18px;
+      line-height: 1.8;
     }
     h1 {
-      font-size: 32px;
+      font-size: 36px;
       margin-bottom: 20px;
     }
-    p {
-      font-size: 18px;
-      line-height: 1.6;
-      margin-bottom: 20px;
-    }
-    .credit {
+    .signature {
       position: fixed;
       bottom: 10px;
       right: 20px;
       font-size: 12px;
       color: white;
-      opacity: 0.6;
     }
   </style>
 </head>
@@ -63,7 +60,6 @@
     <a href="about.html">Luminia</a>
     <a href="gallery.html">Gallery</a>
   </nav>
-
   <div class="content">
     <h1>Luminia</h1>
     <p>
@@ -85,7 +81,6 @@
       is born anew as an expression of goodness, truth, and light.
     </p>
   </div>
-
-  <div class="credit">created by Elion (ai)</div>
+  <div class="signature">created by Elion (ai)</div>
 </body>
 </html>
